crates/logic-compile/src/projections/snapshots/canonical-rdf12@confidence-scoped-axiom.snap
---
source: crates/logic-compile/src/projections/tests.rs
assertion_line: 257
expression: rdf_snapshot(&arts.canonical_rdf12)
---
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Ontology>
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <http://www.w3.org/2000/01/rdf-schema#isDefinedBy> <https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12>
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <http://www.w3.org/2000/01/rdf-schema#label> "GMEOW canonical RDF 1.2 logic projection"@x-gmeow-english
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <http://www.w3.org/2004/02/skos/core#definition> "The canonical, lossless RDF 1.2 projection of the GMEOW logic core: every axiom, rule, reasoning contract, obligation, and scoped statement serialized through the RDF-1.2 reifier surface so the logic: layer round-trips byte-for-byte."@x-gmeow-english
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <https://blackcatinformatics.ca/gmeow/graphBoxRole> <https://blackcatinformatics.ca/gmeow/boxTBox>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#object> <https://example.org/confidence-scoped-axiom/Organism>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#predicate> <https://blackcatinformatics.ca/logic/subClassOf>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#subject> <https://example.org/confidence-scoped-axiom/Animal>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/1999/02/22-rdf-syntax-ns#Statement>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <https://blackcatinformatics.ca/logic/confidence> "0.9"^^<http://www.w3.org/2001/XMLSchema#decimal>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <https://blackcatinformatics.ca/logic/modality> <https://blackcatinformatics.ca/logic/epistemic>
<https://example.org/confidence-scoped-axiom/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/Kind>
<https://example.org/confidence-scoped-axiom/Animal> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Organism>
<https://example.org/confidence-scoped-axiom/Bird> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/SubKind>
<https://example.org/confidence-scoped-axiom/Bird> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Animal>
<https://example.org/confidence-scoped-axiom/Organism> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/Kind>
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/confidence> "0.9"
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/modality> <https://blackcatinformatics.ca/logic/epistemic>
