crates/logic-compile/src/projections/snapshots/derived-shacl-core-graph.snap
---
source: crates/logic-compile/src/projections/tests.rs
expression: rdf_snapshot(&shacl)
---
<https://blackcatinformatics.ca/gmeow/Article-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/Article-shape> <http://www.w3.org/ns/shacl#property> _:gts_00000000000000000000000000
<https://blackcatinformatics.ca/gmeow/Article-shape> <http://www.w3.org/ns/shacl#targetClass> <https://blackcatinformatics.ca/gmeow/Article>
<https://blackcatinformatics.ca/gmeow/FinancialAccount-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/FinancialAccount-shape> <http://www.w3.org/ns/shacl#property> _:gts_00000000000000000000000001
<https://blackcatinformatics.ca/gmeow/FinancialAccount-shape> <http://www.w3.org/ns/shacl#targetClass> <https://blackcatinformatics.ca/gmeow/FinancialAccount>
<https://blackcatinformatics.ca/gmeow/JournalEntry-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/JournalEntry-shape> <http://www.w3.org/ns/shacl#property> _:gts_00000000000000000000000002
<https://blackcatinformatics.ca/gmeow/JournalEntry-shape> <http://www.w3.org/ns/shacl#targetClass> <https://blackcatinformatics.ca/gmeow/JournalEntry>
<https://blackcatinformatics.ca/gmeow/Plant-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/Plant-shape> <http://www.w3.org/ns/shacl#not> _:gts_00000000000000000000000003
<https://blackcatinformatics.ca/gmeow/Plant-shape> <http://www.w3.org/ns/shacl#targetClass> <https://blackcatinformatics.ca/gmeow/Plant>
<https://blackcatinformatics.ca/gmeow/gtsHeadId-range-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/gtsHeadId-range-shape> <http://www.w3.org/ns/shacl#property> _:gts_00000000000000000000000004
<https://blackcatinformatics.ca/gmeow/gtsHeadId-range-shape> <http://www.w3.org/ns/shacl#targetObjectsOf> <https://blackcatinformatics.ca/gmeow/gtsHeadId>
<https://blackcatinformatics.ca/gmeow/primaryId-domain-shape> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/ns/shacl#NodeShape>
<https://blackcatinformatics.ca/gmeow/primaryId-domain-shape> <http://www.w3.org/ns/shacl#property> _:gts_00000000000000000000000006
<https://blackcatinformatics.ca/gmeow/primaryId-domain-shape> <http://www.w3.org/ns/shacl#targetSubjectsOf> <https://blackcatinformatics.ca/gmeow/primaryId>
_:gts_00000000000000000000000000 <http://www.w3.org/ns/shacl#class> <https://blackcatinformatics.ca/gmeow/Doc>
_:gts_00000000000000000000000000 <http://www.w3.org/ns/shacl#path> <https://blackcatinformatics.ca/gmeow/cites>
_:gts_00000000000000000000000001 <http://www.w3.org/ns/shacl#datatype> <http://www.w3.org/2001/XMLSchema#string>
_:gts_00000000000000000000000001 <http://www.w3.org/ns/shacl#maxLength> "11"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000001 <http://www.w3.org/ns/shacl#minLength> "8"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000001 <http://www.w3.org/ns/shacl#path> <https://blackcatinformatics.ca/gmeow/bic>
_:gts_00000000000000000000000001 <http://www.w3.org/ns/shacl#pattern> "^[A-Z]{6}[A-Z0-9]{2}([A-Z0-9]{3})?$"
_:gts_00000000000000000000000002 <http://www.w3.org/ns/shacl#maxCount> "9"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000002 <http://www.w3.org/ns/shacl#minCount> "2"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000002 <http://www.w3.org/ns/shacl#path> <https://blackcatinformatics.ca/gmeow/entryLine>
_:gts_00000000000000000000000003 <http://www.w3.org/ns/shacl#class> <https://blackcatinformatics.ca/gmeow/Animal>
_:gts_00000000000000000000000004 <http://www.w3.org/ns/shacl#maxCount> "1"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000004 <http://www.w3.org/ns/shacl#path> _:gts_00000000000000000000000005
_:gts_00000000000000000000000005 <http://www.w3.org/ns/shacl#inversePath> <https://blackcatinformatics.ca/gmeow/gtsHeadId>
_:gts_00000000000000000000000006 <http://www.w3.org/ns/shacl#maxCount> "1"^^<http://www.w3.org/2001/XMLSchema#integer>
_:gts_00000000000000000000000006 <http://www.w3.org/ns/shacl#path> <https://blackcatinformatics.ca/gmeow/primaryId>
