crates/logic-compile/src/projections/snapshots/derived-shacl-core.snap
---
source: crates/logic-compile/src/projections/tests.rs
expression: shacl
---
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .

<https://blackcatinformatics.ca/gmeow/Article-shape> a sh:NodeShape ;
    sh:targetClass <https://blackcatinformatics.ca/gmeow/Article> ;
    sh:property [ sh:path <https://blackcatinformatics.ca/gmeow/cites> ; sh:class <https://blackcatinformatics.ca/gmeow/Doc> ] .

<https://blackcatinformatics.ca/gmeow/FinancialAccount-shape> a sh:NodeShape ;
    sh:targetClass <https://blackcatinformatics.ca/gmeow/FinancialAccount> ;
    sh:property [ sh:path <https://blackcatinformatics.ca/gmeow/bic> ; sh:datatype <http://www.w3.org/2001/XMLSchema#string> ; sh:maxLength 11 ; sh:minLength 8 ; sh:pattern "^[A-Z]{6}[A-Z0-9]{2}([A-Z0-9]{3})?$" ] .

<https://blackcatinformatics.ca/gmeow/JournalEntry-shape> a sh:NodeShape ;
    sh:targetClass <https://blackcatinformatics.ca/gmeow/JournalEntry> ;
    sh:property [ sh:path <https://blackcatinformatics.ca/gmeow/entryLine> ; sh:minCount 2 ; sh:maxCount 9 ] .

<https://blackcatinformatics.ca/gmeow/Plant-shape> a sh:NodeShape ;
    sh:targetClass <https://blackcatinformatics.ca/gmeow/Plant> ;
    sh:not [ sh:class <https://blackcatinformatics.ca/gmeow/Animal> ] .

<https://blackcatinformatics.ca/gmeow/gtsHeadId-range-shape> a sh:NodeShape ;
    sh:targetObjectsOf <https://blackcatinformatics.ca/gmeow/gtsHeadId> ;
    sh:property [ sh:path [ sh:inversePath <https://blackcatinformatics.ca/gmeow/gtsHeadId> ] ; sh:maxCount 1 ] .

<https://blackcatinformatics.ca/gmeow/primaryId-domain-shape> a sh:NodeShape ;
    sh:targetSubjectsOf <https://blackcatinformatics.ca/gmeow/primaryId> ;
    sh:property [ sh:path <https://blackcatinformatics.ca/gmeow/primaryId> ; sh:maxCount 1 ] .
