crates/logic-compile/src/projections/snapshots/derived-shex.snap
---
source: crates/logic-compile/src/projections/tests.rs
expression: shex
---
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>

# targetClass <https://blackcatinformatics.ca/gmeow/Article> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/Article-shape> {
  <https://blackcatinformatics.ca/gmeow/cites> IRI ;
}

# targetClass <https://blackcatinformatics.ca/gmeow/FinancialAccount> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/FinancialAccount-shape> {
  <https://blackcatinformatics.ca/gmeow/bic> <http://www.w3.org/2001/XMLSchema#string> MAXLENGTH 11 MINLENGTH 8 /^[A-Z]{6}[A-Z0-9]{2}([A-Z0-9]{3})?$/ ;
}

# targetClass <https://blackcatinformatics.ca/gmeow/JournalEntry> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/JournalEntry-shape> {
  <https://blackcatinformatics.ca/gmeow/entryLine> . {2,9} ;
}

# targetClass <https://blackcatinformatics.ca/gmeow/Plant> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/Plant-shape> {
}

# targetObjectsOf <https://blackcatinformatics.ca/gmeow/gtsHeadId> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/gtsHeadId-range-shape> {
  <https://blackcatinformatics.ca/gmeow/gtsHeadId> . {0,1} ;
}

# targetSubjectsOf <https://blackcatinformatics.ca/gmeow/primaryId> (associate via ShapeMap)
<https://blackcatinformatics.ca/gmeow/primaryId-domain-shape> {
  <https://blackcatinformatics.ca/gmeow/primaryId> . {0,1} ;
}
