crates/logic-compile/src/projections/snapshots/nemo@confidence-scoped-axiom.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.nemo
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Nemo (.rls) projection of the canonical logic: program.

% === Ground facts (axioms) ===
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/confidence-scoped-axiom/Animal>, <https://blackcatinformatics.ca/logic/Kind>, "default").
<https://blackcatinformatics.ca/logic/subClassOf>(<https://example.org/confidence-scoped-axiom/Animal>, <https://example.org/confidence-scoped-axiom/Organism>, "epistemic").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/confidence-scoped-axiom/Bird>, <https://blackcatinformatics.ca/logic/SubKind>, "default").
<https://blackcatinformatics.ca/logic/subClassOf>(<https://example.org/confidence-scoped-axiom/Bird>, <https://example.org/confidence-scoped-axiom/Animal>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/confidence-scoped-axiom/Organism>, <https://blackcatinformatics.ca/logic/Kind>, "default").
<https://blackcatinformatics.ca/logic/confidence>(<https://example.org/confidence-scoped-axiom/stmt1>, "0.9", "default").
<https://blackcatinformatics.ca/logic/modality>(<https://example.org/confidence-scoped-axiom/stmt1>, <https://blackcatinformatics.ca/logic/epistemic>, "default").

% === Rules ===
