crates/logic-compile/src/projections/snapshots/owl-dl@confidence-scoped-axiom.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: rdf_snapshot(&arts.owl_dl)
---
<https://blackcatinformatics.ca/gmeow/owl/gmeow-dl> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Ontology>
<https://example.org/confidence-scoped-axiom/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Kind>
<https://example.org/confidence-scoped-axiom/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/confidence-scoped-axiom/Animal> <http://www.w3.org/2000/01/rdf-schema#subClassOf> <https://example.org/confidence-scoped-axiom/Organism>
<https://example.org/confidence-scoped-axiom/Bird> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#SubKind>
<https://example.org/confidence-scoped-axiom/Bird> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/confidence-scoped-axiom/Bird> <http://www.w3.org/2000/01/rdf-schema#subClassOf> <https://example.org/confidence-scoped-axiom/Animal>
<https://example.org/confidence-scoped-axiom/Organism> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Kind>
<https://example.org/confidence-scoped-axiom/Organism> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
